# turtle

./: .coverage  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/providers/: model_fetcher.py
src/setup/: provider_selector.py
src/turtle_cli/: __init__.py
src/turtle_cli/llm/: _init_.py  client.py  conversation.py
src/turtle_cli/tools/: __init__.py  adapters.py  command.py  executor.py  filesystem.py  formatter.py  loop.py  parser.py  protocol.py  streaming.py
tests/turtle_cli/llm/: test_client.py  test_conversation.py
tests/turtle_cli/tools/: test_adapters.py  test_command.py  test_executor.py  test_filesystem.py  test_formatter.py  test_loop.py  test_parser.py  test_protocol.py  test_streaming.py
