[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "turtle-cli"
version = "0.1.0"
description = "Multi-API AI coding assistant CLI"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Turtle CLI Contributors" }
]

dependencies = [
    "litellm>=1.30.0",
    "tenacity>=8.2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0"
]

[project.scripts]
turtle = "turtle.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/turtle"]

[tool.pytest.ini_options]
pythonpath = ["src"]
